src/sass/style.scss
@charset "utf-8";

// Import a Google Font
//@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

// Set your brand colors
//$red: #C1292E;
//$green: #0CCE6B;
//$yellow: #F1D302;
//$blue: #7D82B8;
//$orange: #ED7D3A;
//$grey-light: #777777;
//$white: #FDFFFC;
//$grey-dark: #211F22;
//$black: #000000;

$grey-dark: #14161A;
$grey-light: #315659;
$blue-dark: #2978A0;
$blue-light: #C6E0FF;
$beige-dark: #BCAB79;
$beige-light: #EBEBD3;
$red-light: #FE5F55;
$red-dark: #C5283D;
$green-light: #4CB963;


// Path to Bulma's sass folder
@use "../../node_modules/bulma/sass" with (
  $family-primary: '"Rubik", sans-serif',
  $primary: $grey-dark,
  $link: $beige-dark,
  $control-border-width: 5px,
  $input-shadow: none,
  $navbar-item-color: $beige-dark,
  $footer-background-color: $grey-dark,
  $navbar-background-color: transparent,
);

@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');

.navbar {
    font-family: "Space Mono", monospace;
}

.navbar a {
    text-align: center;
    padding: 12px 16px;
    text-decoration: none;
}

a.navbar-item:hover {
    background-color: transparent;
    color: $beige-light;
}

a.navbar-item.is-active{
    background-color: transparent; 
    color: $red-light;
}

.content {
    padding-top: 1rem;
    padding-bottom: 1rem;
}

h1.page-title {
    font-family: "Space Mono", sans-serif;
    color: $beige-dark;
}

p a:hover {
    color: $beige-light;
}

i:hover {
    color: $beige-light;
}

footer {
    font-family: "Rubik", sans-serif;
    //border-top: 1px solid $beige-dark;
    text-align: center;
}

h1.section-title {
    font-family: "Space Mono", monospace;
    color: $beige-dark;
}

h3.section-subtitle {
    color: $beige-light;
}

.title {
    font-family: "Space Mono", monospace;
}

::selection {
    background: $red-light;
    color: white;
}

@media screen and (max-width: 1025px) {
    .navbar-brand {
      display: none !important;
    }
  }

